test/scc/stmt/semantic-errors/052.t
int* test()
{
    const int* b;
    return b;
}